--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -14,6 +14,8 @@ Layout/MultilineOperationIndentation:
   Enabled: false
 Layout/EmptyLineAfterGuardClause:
   Enabled: false
+Layout/ExtraSpacing:
+  Enabled: false
 Style/FrozenStringLiteralComment:
   Enabled: false
 Style/Documentation:
